--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 body {
     color: white;
     scroll-behavior: smooth;
-    background: rgb(0, 0, 0) url(galaxy.jpg) no-repeat fixed; 
+    background: rgb(0, 0, 0) url(asset/galaxy.jpg) no-repeat fixed; 
     background-size:cover;  
     margin: 0;
     overflow-x: hidden;
@@ -83,16 +83,16 @@ img {
 }
 
 .star-layer{
-    background:  url(stardust.png) repeat;
+    background:  url(asset/stardust.png) repeat;
 }
 
 .nebula-layer{
-    background: url(nebula.png) repeat-x;
+    background: url(asset/nebula.png) repeat-x;
     background-size: contain;
 }
 
 .comet-layer{
-    background: url(comet.png);
+    background: url(asset/comet.png);
     animation: comet-flicker 3s ease-in-out infinite alternate;
     background-repeat: no-repeat;
 }
@@ -103,7 +103,7 @@ img {
 }
 
 .meteorite-layer{
-    background:url(meteorite.png) repeat-x;    
+    background:url(asset/meteorite.png) repeat-x;    
 }
 
 a{
